sthlmio/web/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sthlmio
  annotations:
    linkerd.io/inject: enabled
