sthlmio/web/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: sthlmio
  labels:
    app: web
spec:
  ports:
    - name: http
      port: 8000
  selector:
    app: web
